-Xlog::file cannot be used with named pipe

XMLWordPrintable

    • b05
    • x86_64
    • linux

        A DESCRIPTION OF THE PROBLEM :
        Even if log rotation is not enabled, -Xlog:gc: fails to start the jvm if provided a path to a fifo (with active consumer)

        STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
        mkfifo testpipe
        <in another shell> less -f testpipe
        java -Xlog:gc:file=testpipe -jar yourjar

        EXPECTED VERSUS ACTUAL BEHAVIOR :
        EXPECTED -
        output of gc logs should be written to pipe
        ACTUAL -
        [0.002s][error ][logging] Unable to log to file /tmp/gclogpipe with log file rotation: /tmp/gclogpipe is not a regular file
        [0.002s][error ][logging] Initialization of output 'file=/tmp/gclogpipe' using options '(null)' failed.


        FREQUENCY : always


              Assignee:
              Harold Seigel (Inactive)
              Reporter:
              Webbug Group
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: