8215699: -Xlog::file cannot be used with named pipe

If the log file is a named pipe then change the default file_count to zero so no log file rotation is attempted.

Reviewed-by: lfoltan, coleenp